# ferrisify-wasm-component

./: .gitignore  README.md  README.wasip2.md
ferris-says-interface/: .gitignore
ferris-says-interface/wit/: world.wit
ferrisify/: Cargo.toml
ferrisify-cli/: Cargo.toml  result.wasm
ferrisify-cli/src/: main.rs
ferrisify/src/: lib.rs
hello-wasip2/: Cargo.toml
hello-wasip2-wit/wit/: world.wit
hello-wasip2/src/: lib.rs
