[package]
name = "ferrisify"
version = "1.0.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.1"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "tanishiking:ferrisify"
target = "tanishiking:ferris-says/ferrisify@1.0.0"

[package.metadata.component.dependencies]
